Fixing Some Spacing issues....

--- a/docs/StandardLibrary/cmaj_doc_style.css
+++ b/docs/StandardLibrary/cmaj_doc_style.css
@@ -67,6 +67,7 @@ module,
 .struct_member_name{
     white-space: pre;
 }
+.specialisation,
 .struct_member,
 .struct_name,
 .variable_name,
@@ -84,7 +85,6 @@ module,
 
 .specialisation_table{
     border:none;
-
     border: 0;
     outline: 0;
     font-size: 100%;
